--- a/css/m.css
+++ b/css/m.css
@@ -3,7 +3,7 @@ html,body{
     height:100%;
     margin: 0;
     padding:0;
-     background-image: url("../img/dragonball.jpg");  
+     background-image: url("../img/namek.png");  
     background-repeat:no-repeat;
     background-attachment: fixed;
     background-size:cover;
@@ -16,6 +16,7 @@ html,body{
     margin: 0 auto;
     background-color: rgba(255,255,255,0.3);
     padding-top: 140px;
+    padding-bottom: 30px;
     text-align: center;
     font-size: 160%;
     font-weight: bold;
@@ -68,6 +69,7 @@ input[type='radio']:checked {
 
 
 #logotipo{
+display:none;
 position:absolute;
 right:30%;
 top:5%;
@@ -77,11 +79,26 @@ opacity: 0.8;
     }
     
 #logotipo2{
+display:none;
 position:absolute;
 left:30%;
-top:5%;
+top:50%;
 width:100px;
 height:90px;
 opacity: 0.8;
 
+}
+
+#akira{
+    position:static;
+height:120px;
+    
+}
+
+
+#krilin{
+    position:static;
+height:200px;        
+    
+    
 }
