--- a/css/Instruccionesmvl.css
+++ b/css/Instruccionesmvl.css
@@ -65,8 +65,10 @@ opacity: 0.8;
     }
 
 #bola4 {
-    position:fixed;
-    top:50%;
+    width:130px;
+    height:100px;
+    position:static;
+    bottom:10%;
     left:80%;
     
     
