--- a/css/m.css
+++ b/css/m.css
@@ -12,9 +12,9 @@ html,body{
 
 
 .container {
-    width: 60%;
+    width: 70%;
     margin: 0 auto;
-    background-color: rgba(255,255,255,0.3);
+    background-color: rgba(255,255,255,0.2);
     padding-top: 140px;
     padding-bottom: 30px;
     text-align: center;
@@ -99,6 +99,14 @@ height:120px;
 #krilin{
     position:static;
 height:200px;        
-    
-    
+}
+
+#satan{
+    position:static;
+height:450px;        
+}
+
+#dragonmeme{
+    position:static;
+height:280px;        
 }
