--- a/css/Instruccionesmvl.css
+++ b/css/Instruccionesmvl.css
@@ -1,72 +1,1 @@
-@font-face {
-	font-family: 'SaiyanSans';
-	src: url('../Fonts/SaiyanSans.eot');
-	src: local('SaiyanSans'), url('../Fonts/SaiyanSans.woff') format('woff'), url('../Fonts/SaiyanSans.ttf') format('truetype');
-}
-
-
-
-html,body{
-    width:100%;
-    height:100%;
-    margin: 0;
-    padding:0;
-     
-}
-
-
-
-.container {
-    width: 100%;
-    margin: 0 auto;
-    background-color: grey;
-    padding-top: 140px;
-    text-align: center;
-   font-family: 'SaiyanSans' !important;
-    font-size: 135%;
-    background-image: url("../img/namek.png");
-    
-    
-       
-}
-
-
-
-.cabecera {
-    height: 100px;
-    width: 100%;
-    text-align: center;
-    position: absolute;
-    background-color: #36626A;
-    top: 0;
-    
-}
-
-.preguntas{
-    padding:20px
-}
-
-
-#logotipo{
-position:absolute;
-right:0%;
-top:10%;
-width:60px;
-height:70px;
-opacity: 0.8;
-    }
-    
-#logotipo2{
-position:absolute;
-left:0%;
-top:10%;
-width:60px;
-height:70px;
-opacity: 0.8;
-    }
-
-#bola4 {
-position:static;
-width:130px;
-height:100px;
-}
+.cabecera,.container{width:100%;text-align:center}@font-face{font-family:SaiyanSans;src:url(../Fonts/SaiyanSans.eot);src:local('SaiyanSans'),url(../Fonts/SaiyanSans.woff) format('woff'),url(../Fonts/SaiyanSans.ttf) format('truetype')}body,html{width:100%;height:100%;margin:0;padding:0}.container{margin:0 auto;background-color:grey;padding-top:140px;font-family:SaiyanSans!important;font-size:135%;background-image:url(../img/namek.png)}.cabecera{height:100px;position:absolute;background-color:#36626A;top:0}#logotipo,#logotipo2{position:absolute;top:10%;width:60px;height:70px;opacity:.8}.preguntas{padding:20px}#logotipo{right:0}#logotipo2{left:0}#bola4{position:static;width:130px;height:100px}
