--- a/css/m.css
+++ b/css/m.css
@@ -1,119 +1,1 @@
-html,body{
-   width:100%;
-    height:100%;
-    margin: 0;
-    padding:0;
-     background-image: url("../img/namek.png");  
-    background-repeat:no-repeat;
-    background-attachment: fixed;
-    background-size:cover;
-}
-
-
-
-.container {
-    width: 70%;
-    margin: 0 auto;
-    background-color: rgba(255,255,255,0.2);
-    padding-top: 140px;
-    padding-bottom: 30px;
-    text-align: center;
-    font-size: 160%;
-    font-weight: bold;
-    
-    
-    
-}
-
-
-
-.cabecera {
-    height: 100px;
-    width: 100%;
-    text-align: center;
-    position: absolute;
-    background-color: #36626A;
-    top: 0;
-    
-}
-
-.preguntas{
-    padding:20px
-}
-
-
-input[type='checkbox'] {
-    -webkit-appearance:none;
-    width:20px;
-    height:20px;
-    background:white;
-    border-radius:5px;
-    border:2px solid #555;
-}
-input[type='checkbox']:checked {
-    background: #abd;
-}
-
-
-input[type='radio'] {
-    -webkit-appearance:none;
-    width:20px;
-    height:20px;
-    background:white;
-    border-radius:5px;
-    border:2px solid #555;
-}
-input[type='radio']:checked {
-    background: #abd;
-}
-
-
-#logotipo{
-display:none;
-position:absolute;
-right:30%;
-top:5%;
-width:100px;
-height:90px;
-opacity: 0.8;
-    }
-    
-#logotipo2{
-display:none;
-position:absolute;
-left:30%;
-top:50%;
-width:100px;
-height:90px;
-opacity: 0.8;
-
-}
-
-#akira{
-    position:static;
-height:120px;
-    
-}
-
-
-#krilin{
-    position:static;
-height:200px;        
-}
-
-#satan{
-    position:static;
-height:450px;        
-}
-
-#dragonmeme{
-    position:static;
-height:280px;        
-}
-
-#resultadosDiv{
-    display:none;
-    height: 40%;
-    width: 100%;
-    background-color: white;
-}
+body,html{width:100%;height:100%;margin:0;padding:0;background-image:url(../img/namek.png);background-repeat:no-repeat;background-attachment:fixed;background-size:cover}.container{width:70%;margin:0 auto;background-color:rgba(255,255,255,.2);padding-top:140px;padding-bottom:30px;text-align:center;font-size:160%;font-weight:700}.cabecera{height:100px;width:100%;text-align:center;position:absolute;background-color:#36626A;top:0}#logotipo,#logotipo2{position:absolute;width:100px;height:90px;opacity:.8;display:none}#akira,#dragonmeme,#krilin,#satan{position:static}.preguntas{padding:20px}input[type=checkbox],input[type=radio]{-webkit-appearance:none;width:20px;height:20px;background:#fff;border-radius:5px;border:2px solid #555}input[type=checkbox]:checked,input[type=radio]:checked{background:#abd}#logotipo{right:30%;top:5%}#logotipo2{left:30%;top:50%}#akira{height:120px}#krilin{height:200px}#satan{height:450px}#dragonmeme{height:280px}#resultadosDiv{display:none;height:40%;width:100%;background-color:#fff}
